; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_serdes.c_b53_serdes_write_blk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_serdes.c_b53_serdes_write_blk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b53_device = type { i32 }

@B53_SERDES_PAGE = common dso_local global i32 0, align 4
@B53_SERDES_BLKADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b53_device*, i32, i32, i32)* @b53_serdes_write_blk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b53_serdes_write_blk(%struct.b53_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.b53_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.b53_device* %0, %struct.b53_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.b53_device*, %struct.b53_device** %5, align 8
  %10 = load i32, i32* @B53_SERDES_PAGE, align 4
  %11 = load i32, i32* @B53_SERDES_BLKADDR, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @b53_write16(%struct.b53_device* %9, i32 %10, i32 %11, i32 %12)
  %14 = load %struct.b53_device*, %struct.b53_device** %5, align 8
  %15 = load i32, i32* @B53_SERDES_PAGE, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @b53_write16(%struct.b53_device* %14, i32 %15, i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @b53_write16(%struct.b53_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
